Updated videojs version to 7.0.2, added videojs-contrib-quality-levels as testing dependency
Updated videojs version to 7.0.2, added videojs-contrib-quality-levels as testing dependency

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <li><a href="test/">Run unit tests in browser.</a></li>
     <li><a href="docs/api/">Read generated docs.</a></li>
   </ul>
-  
+
   <script src="node_modules/video.js/dist/video.js"></script>
+  <script src="node_modules/videojs-contrib-quality-levels/dist/videojs-contrib-quality-levels.js"></script>
   <script src="dist/videojs-http-source-selector.js"></script>
   <script>
     (function(window, videojs) {
