Modernized for VideoJS 7

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <video id="videojs-http-source-selector-player" class="video-js vjs-default-skin" controls>
-    <source src="//vjs.zencdn.net/v/oceans.mp4" type='video/mp4'>
-    <source src="//vjs.zencdn.net/v/oceans.webm" type='video/webm'>
+    <source src="https://d3301nf2ffvsk4.cloudfront.net/feature/CID-113/66331/playlist.m3u8" type='application/x-mpegURL'>
   </video>
   <ul>
     <li><a href="test/">Run unit tests in browser.</a></li>
