--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="dist/videojs-http-source-selector.css" rel="stylesheet">
 </head>
 <body>
-  <video id="videojs-http-source-selector-player" class="video-js vjs-default-skin" controls>
+  <video id="videojs-http-source-selector-player" width="1280" height="720" class="video-js vjs-default-skin" controls>
     <source src="https://d3301nf2ffvsk4.cloudfront.net/feature/CID-113/66331/playlist.m3u8" type='application/x-mpegURL'>
   </video>
   <ul>
