do not ignore dist directory. fix demo to use big buck bunny

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <video id="videojs-http-source-selector-player" width="1280" height="720" class="video-js vjs-default-skin" controls>
-    <source src="https://d3301nf2ffvsk4.cloudfront.net/feature/CID-113/66331/playlist.m3u8" type='application/x-mpegURL'>
+    <source src="http://www.streambox.fr/playlists/x36xhzz/x36xhzz.m3u8" type='application/x-mpegURL'>
   </video>
   <ul>
     <li><a href="test/">Run unit tests in browser.</a></li>
