Added demo site hosted by github pages

--- a/index.html
+++ b/index.html
@@ -3,26 +3,33 @@
 <head>
   <meta charset="utf-8">
   <title>videojs-http-source-selector Demo</title>
-  <link href="node_modules/video.js/dist/video-js.css" rel="stylesheet">
+  <link href="https://vjs.zencdn.net/7.4.1/video-js.css" rel="stylesheet">
+  <!--<link href="node_modules/video.js/dist/video-js.css" rel="stylesheet">-->
   <link href="dist/videojs-http-source-selector.css" rel="stylesheet">
 </head>
 <body>
+  <title>videojs-http-source-selector Demo</title>
   <video id="videojs-http-source-selector-player" width="1280" height="720" class="video-js vjs-default-skin" controls>
-    <source src="http://www.streambox.fr/playlists/x36xhzz/x36xhzz.m3u8" type='application/x-mpegURL'>
+    <source src="https://www.streambox.fr/playlists/x36xhzz/x36xhzz.m3u8" type='application/x-mpegURL'>
   </video>
-  <ul>
-    <li><a href="test/">Run unit tests in browser.</a></li>
-    <li><a href="docs/api/">Read generated docs.</a></li>
-  </ul>
+  Stream URL:
+  <input type="text" id="streamURL" value="" size="65">
+  <button onClick="loadStream()">Load</button>
 
-  <script src="node_modules/video.js/dist/video.js"></script>
-  <script src="node_modules/videojs-contrib-quality-levels/dist/videojs-contrib-quality-levels.js"></script>
+  <!--<script src="node_modules/video.js/dist/video.js"></script>-->
+  <script src='https://vjs.zencdn.net/7.4.1/video.js'></script>
+  <script src="dist/videojs-contrib-quality-levels.js"></script>
   <script src="dist/videojs-http-source-selector.js"></script>
   <script>
     (function(window, videojs) {
       var player = window.player = videojs('videojs-http-source-selector-player');
       player.httpSourceSelector();
     }(window, window.videojs));
+
+    function loadStream(){
+      console.log("Change stream to : "+document.getElementById("streamURL").value );
+      player.src({ type: "application/x-mpegURL", src: document.getElementById("streamURL").value });
+    }
   </script>
 </body>
 </html>
