Updated default demo source video url
Updated default demo source video url

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <title>videojs-http-source-selector Demo</title>
   <video id="videojs-http-source-selector-player" width="1280" height="720" class="video-js vjs-default-skin" controls>
-    <source src="https://www.streambox.fr/playlists/x36xhzz/x36xhzz.m3u8" type='application/x-mpegURL'>
+    <source src="https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8" type='application/x-mpegURL'>
   </video>
   Stream URL:
-  <input type="text" id="streamURL" value="" size="65">
+  <input type="text" id="streamURL" value="https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8" size="65">
   <button onClick="loadStream()">Load</button>
 
   <!--<script src="node_modules/video.js/dist/video.js"></script>-->
