Update sample stream
Update sample stream

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <title>videojs-http-source-selector Demo</title>
   <video id="videojs-http-source-selector-player" width="1280" height="720" class="video-js vjs-default-skin" controls>
-    <source src="https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8" type='application/x-mpegURL'>
+    <source src="https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8" type='application/x-mpegURL'>
   </video>
   Stream URL:
-  <input type="text" id="streamURL" value="https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8" size="65">
+  <input type="text" id="streamURL" value="https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8" size="65">
   <button onClick="loadStream()">Load</button>
 
   <!--<script src="node_modules/video.js/dist/video.js"></script>-->
