Added test captions
Added test captions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   Stream URL:
   <input type="text" id="streamURL" value="https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8" size="65">
   <button onClick="loadStream()">Load</button>
+  Caption1 URL:
+  <input type="text" id="caption1URL" value="https://crackle-mediaconvert.s3.amazonaws.com/assets/thesonata/HLS/captions/thesonata_aiml.vtt" size="65">
+  <button onClick="loadCaption1()">Load Caption</button>
+  <br/>
+  Caption2 URL:
+  <input type="text" id="caption2URL" value="https://crackle-mediaconvert.s3.amazonaws.com/assets/thesonata/HLS/captions/thesonata_3play.vtt" size="65">
+  <button onClick="loadCaption2()">Load Caption</button>
 
   <!--<script src="node_modules/video.js/dist/video.js"></script>-->
   <script src='https://vjs.zencdn.net/7.4.1/video.js'></script>
@@ -29,6 +36,16 @@
     function loadStream(){
       console.log("Change stream to : "+document.getElementById("streamURL").value );
       player.src({ type: "application/x-mpegURL", src: document.getElementById("streamURL").value });
+    }
+
+    function loadCaption1(){
+      console.log("Add caption: "+document.getElementById("caption1URL").value );
+      player.addRemoteTextTrack({src: document.getElementById("caption1URL").value, label: 'Caption 1'}, false);
+    }
+
+    function loadCaption2(){
+      console.log("Add caption: "+document.getElementById("caption2URL").value );
+      player.addRemoteTextTrack({src: document.getElementById("caption2URL").value, label: 'Caption 2'}, false);
     }
   </script>
 </body>
