Added query-param stream linking to demo player
Added query-param stream linking to demo player

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     (function(window, videojs) {
       var player = window.player = videojs('videojs-http-source-selector-player');
       player.httpSourceSelector();
+      //Load stream from query param /?stream=MYHLS_STREAM_URL_GOES_HERE
+      var queryParamStream = getQueryString('stream');
+      if(queryParamStream !== null)
+      {
+        document.getElementById("streamURL").value = queryParamStream;
+        player.src({ type: "application/x-mpegURL", src: document.getElementById("streamURL").value });
+      }
     }(window, window.videojs));
 
     function loadStream(){
@@ -47,6 +54,20 @@
     function loadCaption2(){
       console.log("Add caption: "+document.getElementById("caption2URL").value );
       player.addRemoteTextTrack({src: document.getElementById("caption2URL").value, label: 'Caption 2'}, false);
+    }
+
+    /**
+      * Get the value of a querystring
+      * @param  {String} field The field to get the value of
+      * @param  {String} url   The URL to get the value from (optional)
+      * @return {String}       The field value
+      */
+    function getQueryString ( field, url )
+    {
+      var href = url ? url : window.location.href;
+      var reg = new RegExp( '[?&]' + field + '=([^]*)', 'i' );
+      var string = reg.exec(href);
+      return string ? string[1] : null;
     }
   </script>
 </body>
