--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   Stream URL:
   <input type="text" id="streamURL" value="https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8" size="65">
   <button onClick="loadStream()">Load</button>
+  <button onClick="loadCaptions()">Load Captions</button>
   <br/>
+  
+  
+  <!--
   Caption1 URL:
   <input type="text" id="caption1URL" value="https://crackle-mediaconvert.s3.amazonaws.com/assets/thesonata/HLS/captions/thesonata_aiml.vtt" size="65">
   <button onClick="loadCaption1()">Load Caption</button>
@@ -23,6 +27,7 @@
   Caption2 URL:
   <input type="text" id="caption2URL" value="https://crackle-mediaconvert.s3.amazonaws.com/assets/thesonata/HLS/captions/thesonata_3play.vtt" size="65">
   <button onClick="loadCaption2()">Load Caption</button>
+  -->
 
   <!--<script src="node_modules/video.js/dist/video.js"></script>-->
   <script src='https://vjs.zencdn.net/7.4.1/video.js'></script>
@@ -46,11 +51,27 @@
       player.src({ type: "application/x-mpegURL", src: document.getElementById("streamURL").value });
     }
 
-    function loadCaption1(){
-      console.log("Add caption: "+document.getElementById("caption1URL").value );
-      player.addRemoteTextTrack({src: document.getElementById("caption1URL").value, label: 'Caption 1'}, false);
+    function loadCaptions(){
+      console.log("Add autogen captions");
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_spanish.vtt", label: 'Spanish'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_portuguese_(portugal_brazil)", label: 'Portuguese (Portugal/Brazil)'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_french.vtt", label: 'French'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_german.vtt", label: 'German'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_russian.vtt", label: 'Russian'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_arabic.vtt", label: 'Arabic'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_polish.vtt", label: 'Polish'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_hindi.vtt", label: 'Hindi'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_japanese.vtt", label: 'Japanese'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_korean.vtt", label: 'Korean'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_chinese_(traditional).vtt", label: 'Chinese (Traditional)'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_chinese_(simplified).vtt", label: 'Chinese (Simplified)'}, false);
+      player.addRemoteTextTrack({src: "https://crackle-mediaconvert.s3.amazonaws.com/assets/anythingispossible/aip_gcp_finnish.vtt", label: 'Finnish'}, false);
     }
 
+    function loadCaption2(){
+      console.log("Add caption: "+document.getElementById("caption2URL").value );
+      player.addRemoteTextTrack({src: document.getElementById("caption2URL").value, label: 'Caption 2'}, false);
+    }
     function loadCaption2(){
       console.log("Add caption: "+document.getElementById("caption2URL").value );
       player.addRemoteTextTrack({src: document.getElementById("caption2URL").value, label: 'Caption 2'}, false);
